...
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:gravity="center_vertical">
        <EditText
            tools:ignore="Autofill,LabelFor"
            style="@style/TextAppearance.NewTabPageSearchBoxText"
            android:id="@+id/search_box_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ellipsize="end"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/search_or_type_web_address" />

        <org.monyhar.ui.widget.ChipView
            android:id="@+id/query_tiles_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone"
            style="@style/InputChipWithRemoveIcon" />
    </RelativeLayout>
...
