<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.monyhar.chrome.browser.omnibox.UrlBarApi26
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/url_bar"
    android:background="@null"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:singleLine="true"
    android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
    android:textSize="@dimen/location_bar_url_text_size"
    android:hint="@string/search_or_type_web_address"
    android:importantForAutofill="no" />
